@@ -1,4 +1,9 @@
 
+next
+----
+- added setting to enable/disable built-in sound groups
+
+
 v1.10.1
 -------
 - deleted sounds:
